<resources>
    <string name="app_name">Arkhire Company</string>
    <string name="maps_api_key">AIzaSyDBF8RfrDl1Haqxxjqidf9J_B4pBof6FKY</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="become_your_hiring_apps">BECOME YOUR HIRING APPS</string>
    <string name="handshake_desc">Arkhire will provide all information about your hiring progress, Of course with realtime update. All information about hiring will showed on your hand.</string>
    <string name="desc_engineerCriteria">Looking for engineer who meet your company criteria? Dont worry in arkhire you can choice best engineer who meet your company requirement.</string>
    <string name="hire_engineer_as_your_criteria">HIRE ENGINEER AS YOUR CRITERIA</string>
    <string name="let_s_get_started_by_creating_your_account">Let\'s Get Started!</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="or">or</string>
    <string name="register">REGISTER</string>
    <string name="welcome_let_s_get_started">Welcome, Let\'s get Started</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account_click_here">Already have account? Sign in here</string>
    <string name="your_position_at_company">Job Position</string>
    <string name="company">Company</string>
    <string name="send_recovery_email">Send Recovery Email</string>
    <string name="registered_email_address">Registered Email Address</string>
    <string name="to_continue_please_input_registered_email">To Continue, Please Input Registered Email</string>
    <string name="android_developer">Android Developer</string>
    <string name="dev_ops_engineer">DevOps Engineer</string>
    <string name="fullstack_mobile">FullStack Mobile</string>
    <string name="fullstack_web">FullStack Web</string>
    <string name="title_activity_company_profile_maps">Map</string>
    <string name="looking_for">Looking For</string>
    <string name="company_description">Company Description</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar porttitor arcu, in rhoncus libero ultricies eget. Nullam eget vulputate sapien, eu posuere metus. Praesent bibendum nisl at ultrices ullamcorper. In in pretium erat. Sed volutpat erat pulvinar tortor rutrum consectetur. Integer a ligula risus. Sed hendrerit sed augue vel elementum. Sed imperdiet tellus a quam mattis feugiat. Suspendisse turpis mauris, congue in neque eu, luctus vulputate quam. Suspendisse potenti. Donec pretium consequat urna ut tincidunt.</string>
    <string name="company_location">Company Location</string>
    <string name="html_css"><![CDATA[html & css]]></string>
    <string name="lite_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas elit ligula, aliquam sed eros in, pretium malesuada elit. Cras euismod dictum placerat. Aliquam et mauris non metus venenatis malesuada. Nullam venenatis porta ipsum id tristique.</string>
    <string name="are_you_sure_want_to_hire_this_talent">Are you sure want to hire this talent?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="make_call_with_this_talent">Make a call with this talent ?</string>
    <string name="done">done</string>
    <string name="github_nickname">http://github.com/</string>
    <string name="edit_company_name">Company name</string>
    <string name="edit_company_type">Company type</string>
    <string name="id_linkedin_com_company">Linkedin: id.linkedin.com/company/</string>
    <string name="www_instagram_com">Instagram: www.instagram.com/</string>
    <string name="web_facebook_com">Facebook: web.facebook.com/</string>
    <string name="update_location">Update Location</string>
    <string name="back">back</string>
    <string name="menu">menu</string>
    <string name="_404_not_found">404 NOT FOUND</string>
    <string name="set_company_profile_so_people_can_know_yours">Set Company Profile, So People Can Know Yours</string>
    <string name="pick_image">PICK IMAGE</string>
    <string name="not_found">not found</string>
    <string name="add_project">Add Project</string>
    <string name="create">create</string>
    <string name="uploading_data">UPLOADING DATA...</string>
    <string name="adding_talent_to_contribute_on_your_project">Adding talent to contribute on your project</string>
    <string name="hire_talent">Hire Talent</string>
    <string name="send">SEND</string>
    <string name="loging_in">Loging in...</string>
    <string name="open_repository">open repository</string>
    <string name="hired">Hired</string>
    <string name="sign_up_question">Sign up</string>
    <string name="create_account_to_join_arkhire">Create account to become partner and start exploring</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_settings">Email Settings</string>
    <string name="please_verify_your_identity_to_continue">Please Verify your identity to continue</string>
    <string name="new_email_address">New Email Address..</string>
    <string name="updatingEmail">Updating Email…</string>
    <string name="password_settings">Password Settings</string>
    <string name="this_is_first_time_you_loged_in_to_continue_please_finish_your_profile">This is first time you loged in, To continue please finish your profile</string>

</resources>