<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_confirmationAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_gravity="center"
        android:text="@string/are_you_sure_want_to_hire_this_talent"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <RelativeLayout
        android:id="@+id/confirmationPrompt"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible"
        android:layout_marginBottom="44dp"
        android:layout_height="wrap_content">

        <android.widget.Button
            android:id="@+id/bt_yesHire"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/round_bg"
            android:text="@string/yes"
            android:textColor="@color/white"/>

        <android.widget.Button
            android:id="@+id/bt_noHire"
            android:layout_toRightOf="@id/bt_yesHire"
            android:layout_marginLeft="76dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/round_bg"
            android:text="@string/no"
            android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>