<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".homepage.item.home.detailedtalent.portfolio.PortfolioDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_portfolioImage"
            android:src="@drawable/portofolio1"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="220dp"/>

        <TextView
            android:id="@+id/tv_portfolioTitle"
            android:text="Portfolio 1"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="12dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="22sp"
            android:layout_below="@id/iv_portfolioImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_portfolioDesc"
            android:layout_below="@id/tv_portfolioTitle"
            android:text="@string/lorem_ipsum"
            android:justificationMode="inter_word"
            android:textSize="15sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/bt_openRepository"
            android:layout_below="@id/tv_portfolioDesc"
            android:background="@color/white"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="60dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:text="@string/open_repository"
                android:textAllCaps="true"
                android:layout_gravity="center_vertical|center_horizontal"
                android:textColor="#2196F3"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/backButton"
            android:layout_below="@id/bt_openRepository"
            android:background="@color/white"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:text="@string/back"
                android:textAllCaps="true"
                android:layout_gravity="center_vertical|center_horizontal"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>


</layout>
